# sampletest_agent_new

./: .gitignore  README.md  index.html  langgraph.json  package-lock.json  package.json  poetry_troubleshooting_summary.md  pyproject.toml  run.py  仕様メモ.yaml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
agent-inbox-main/: .gitignore  package.json
agent-inbox-main/src/components/agent-inbox/: index.tsx  thread-view.tsx
agent-inbox-main/src/components/agent-inbox/components/: GraphExecutionPanel.tsx  thread-actions-view.tsx
data/format/: サンプルテスト調書フォーマット.xlsx
data/sample/テスト1/サンプル1/: fraudulent_order_data.txt
data/sample/テスト1/サンプル2/: normal_order_data.txt
docs/: poetry_troubleshooting_summary.md
src/: App.tsx  main.tsx
src/agent/: excel_format_node.py  graph.py  react_node.py  state.py  understand_format.py  update_format_node.py  webapp.py
src/api/: server.py
