[tool.poetry]
name = "agent-inbox-example"
version = "0.0.1"
description = "Example repository for getting started with the Agent Inbox"
authors = ["Brace Sproul"]
readme = "README.md"
license = "MIT"
packages = [
    { include = "agent", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
langchain = "^0.2.1"
langgraph = "^0.2.0"
langchain-openai = "^0.1.8"
python-dotenv = "^1.0.1"
httpx = "^0.27.0"
pandas = "^2.2.0"
langgraph-sdk = "^0.1.51"
uvicorn = "^0.32.2"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"